--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "ts-node": "ts-node",
     "start": "ts-node index.ts",
     "lint": "eslint --ext .ts .",
-    "dev": "ts-node-dev index.ts"
+    "dev": "NODE_ENV=dev ts-node-dev index.ts",
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.3",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
@@ -25,6 +27,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
