--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "tsc": "tsc",
     "ts-node": "ts-node",
-    "start": "ts-node index.ts",
+    "start": "NODE_ENV=production ts-node index.ts",
     "lint": "eslint --ext .ts .",
     "dev": "NODE_ENV=dev ts-node-dev index.ts",
     "test": "NODE_ENV=test jest --runInBand"
