--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "@types/sequelize": "^4.28.15",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "prettier": "^2.8.8",
