--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/material-ui": "^0.21.12",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.9",
@@ -34,6 +32,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.2",
+    "install": "^0.13.0",
+    "jest": "^27.5.1",
+    "npm": "^9.7.1",
     "react-scripts": "5.0.1"
   },
   "browserslist": {
