--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{ts,tsx}'"
   },
@@ -33,13 +33,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-typescript": "^7.22.5",
-    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
-    "install": "^0.13.0",
-    "jest": "^27.5.1",
-    "npm": "^9.7.1",
-    "react-scripts": "5.0.1"
+    "jest": "^29.5.0",
+    "react-scripts": "5.0.1",
+    "ts-jest": "^29.1.0"
   },
   "browserslist": {
     "production": [
