--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,6 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/material-ui": "^0.21.12",
-    "@types/node": "^16.18.34",
-    "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,8 +27,18 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.2",
+    "@types/jsdom": "^21.1.1",
+    "@types/material-ui": "^0.21.12",
+    "@types/node": "^16.18.34",
+    "@types/react": "^18.2.9",
+    "@types/react-dom": "^18.2.4",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^22.1.0",
     "react-scripts": "5.0.1",
     "ts-jest": "^29.1.0"
   },
