--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "typescript": "^4.9.5",
@@ -39,6 +40,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
+    "@types/react-big-calendar": "^1.6.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^22.1.0",
