wrap app, update to tanstack

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "@mui/x-date-pickers": "^6.8.0",
+    "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "react": "^18.2.0",
@@ -39,8 +41,8 @@
     "@types/material-ui": "^0.21.12",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
     "@types/react-big-calendar": "^1.6.4",
+    "@types/react-dom": "^18.2.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^22.1.0",
