--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-big-calendar": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
+    "react-secure-storage": "^1.2.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
